--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,7 @@ gha-creds-*.json
 #############################
 
 # decrypted secrets
-*.dec.env
-*.dec.json
-*.dec.txt
-*.dec.yaml
+secrets.dec.yaml
 
 #############################
 ### Docker
