--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,20 +23,40 @@ profiles:
         tryImportMissing: false
     deploy:
       kubeContext: docker-desktop
-      kustomize:
-        paths:
-          - deploy/goapp/overlays/dev
+      helm:
+        releases:
+          - name: goapp-dev
+            namespace: default
+            chartPath: deploy/goapp
+            valuesFiles:
+              - deploy/goapp/releases/goapp-dev/values.yaml
+            artifactOverrides:
+              image: goapp
+            imageStrategy:
+              helm: {}
   - name: prod
     build:
       googleCloudBuild:
         projectId: gomod-0
     deploy:
       kubeContext: gke_gomod-0_europe-central2_autopilot-cluster-1
-      kustomize:
-        paths:
-          - deploy/goapp/overlays/prod
+      helm:
+        releases:
+          - name: goapp-prod
+            namespace: default
+            chartPath: deploy/goapp
+            valuesFiles:
+              - deploy/goapp/releases/goapp-prod/values.yaml
+              - deploy/goapp/releases/goapp-prod/secrets.dec.yaml
+            artifactOverrides:
+              image: goapp
+            imageStrategy:
+              helm: {}
         hooks:
           before:
-            - host: { command: ["scripts/sops/decrypt.sh"] }
-          after:
-            - host: { command: ["scripts/sops/rm-decrypted.sh"] }
+            - host:
+                command:
+                  - sops
+                  - --decrypt
+                  - --output=deploy/goapp/releases/goapp-prod/secrets.dec.yaml
+                  - deploy/goapp/releases/goapp-prod/secrets.enc.yaml
