--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,5 @@ indent_style = tab
 indent_style = tab
 
 # SOPS uses 4 spaces for YAML files
-[*.{dec,enc}.yaml]
+[secrets.{dec,enc}.yaml]
 indent_size = 4
