--- a/deploy/goapp/templates/http-server.deploy.yaml
+++ b/deploy/goapp/templates/http-server.deploy.yaml
@@ -1,33 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: http-server
+  name: "{{ .Release.Name }}-http-server"
+  namespace: "{{ .Release.Namespace }}"
   labels:
     app.kubernetes.io/component: http-server
+    {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.httpServer.minReplicas }}
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
       app.kubernetes.io/component: http-server
+      {{- include "goapp.selectorLabels" $ | nindent 6 }}
   template:
     metadata:
       labels:
         app.kubernetes.io/component: http-server
+        {{- include "goapp.metadataLabels" $ | nindent 8 }}
       annotations:
         prometheus.io/scrape: "false"
         prometheus.io/port: http
         prometheus.io/path: /-/metrics
+        checksum/configs: "{{ include "goapp.configsChecksum" $ }}"
     spec:
       containers:
         - name: http-server
-          image: goapp
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           envFrom:
             - configMapRef:
-                name: config-envs
+                name: "{{ .Release.Name }}-config-envs"
             - secretRef:
-                name: config-envs
+                name: "{{ .Release.Name }}-config-envs"
           volumeMounts:
             - name: config-files
               mountPath: /run/secrets/goapp
@@ -61,6 +66,6 @@ spec:
           projected:
             sources:
               - configMap:
-                  name: config-files
+                  name: "{{ .Release.Name }}-config-files"
               - secret:
-                  name: config-files
+                  name: "{{ .Release.Name }}-config-files"
