--- a/deploy/goapp/templates/http-server.svc.yaml
+++ b/deploy/goapp/templates/http-server.svc.yaml
@@ -1,13 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: http-server
+  name: "{{ .Release.Name }}-http-server"
+  namespace: "{{ .Release.Namespace }}"
   labels:
     app.kubernetes.io/component: http-server
+    {{- include "goapp.metadataLabels" $ | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/component: http-server
+    {{- include "goapp.selectorLabels" $ | nindent 4 }}
   ports:
     - name: http
       port: 80
