--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -19,6 +19,8 @@ jobs:
     permissions:
       id-token: "write"
     runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/damlys/godev:2022-09-04-16-05-13-8d7f6d8
     steps:
       - name: Set Git user
         run: |
@@ -36,20 +38,6 @@ jobs:
         run: gcloud auth configure-docker europe-central2-docker.pkg.dev
       - name: Authenticate to Kubernetes cluster
         run: gcloud container clusters get-credentials autopilot-cluster-1 --region europe-central2 --project gomod-0
-
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: "1.19"
-      - name: Cache Homebrew
-        uses: actions/cache@v3
-        with:
-          key: "${{ runner.os }}-homebrew"
-          path: /home/runner/.cache/Homebrew
-      - run: brew install container-structure-test
-      - run: brew install golangci-lint
-      - run: brew install skaffold
-      - run: brew install sops
 
       - name: Format Go code
         run: go fmt ./...
