--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,14 @@
 {
-  "image": "ghcr.io/damlys/godev:2022-09-04-16-05-13-8d7f6d8",
-  "name": "godev",
-
-  "mounts": [
-    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+  "image": "ghcr.io/damlys/godev:2022-09-06-09-42-11-e64ce98",
+  "runArgs": [
+    "--add-host=kubernetes.docker.internal:host-gateway"
   ],
-
-  "forwardPorts": [56268],
-  "portsAttributes": {
-    "56268": { "label": "dlv" }
-  },
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+    "source=${localEnv:HOME}/.docker,target=/root/.docker,type=bind",
+    "source=${localEnv:HOME}/.kube/config,target=/root/.kube/config,type=bind",
+    "source=${localEnv:HOME}/.config/gcloud,target=/root/.config/gcloud,type=bind"
+  ],
 
   "customizations": {
     "vscode": {
@@ -19,7 +18,8 @@
         "googlecloudtools.cloudcode",
         "ms-azuretools.vscode-docker",
         "ms-kubernetes-tools.vscode-kubernetes-tools"
-      ]
+      ],
+      "settings": {}
     }
   }
 }
