--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,17 @@
 {
   "image": "ghcr.io/damlys/godev:2022-09-06-09-42-11-e64ce98",
-  "runArgs": [
-    "--add-host=kubernetes.docker.internal:host-gateway"
-  ],
   "mounts": [
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
     "source=${localEnv:HOME}/.docker,target=/root/.docker,type=bind",
-    "source=${localEnv:HOME}/.kube/config,target=/root/.kube/config,type=bind",
+    "source=${localEnv:HOME}/.kube,target=/root/.kube,type=bind",
     "source=${localEnv:HOME}/.config/gcloud,target=/root/.config/gcloud,type=bind"
   ],
+  "runArgs": [
+    "--add-host=kubernetes.docker.internal:host-gateway"
+  ],
+  "containerEnv": {
+    "EDITOR": "code --wait"
+  },
 
   "customizations": {
     "vscode": {
