--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
     "source=${localEnv:HOME}/.docker,target=/root/.docker,type=bind",
     "source=${localEnv:HOME}/.kube,target=/root/.kube,type=bind",
-    "source=${localEnv:HOME}/.config/gcloud,target=/root/.config/gcloud,type=bind"
+    "source=${localEnv:HOME}/.config/gcloud,target=/root/.config/gcloud,type=bind",
+    "source=${localEnv:HOME}/go/pkg,target=/root/go/pkg,type=bind"
   ],
   "containerEnv": {
     "EDITOR": "code --wait"
