--- a/.dockerignore
+++ b/.dockerignore
@@ -82,6 +82,9 @@ vendor
 **/mem.out
 **/testdata
 
+# debug
+**/__debug_bin
+
 #############################
 ### Other
 #############################
