--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "ghcr.io/damlys/godev:2022-09-07-05-57-15-86853e0",
+  "image": "ghcr.io/damlys/godev:2022-09-08-09-19-35-16b630d",
   "runArgs": [
     "--name=gomod-devcontainer",
     "--add-host=kubernetes.docker.internal:host-gateway"
@@ -12,13 +12,10 @@
     "source=${localEnv:HOME}/.skaffold,target=/root/.skaffold,type=bind",
     "source=${localEnv:HOME}/.config/gcloud,target=/root/.config/gcloud,type=bind"
   ],
-  "containerEnv": {
-    "EDITOR": "code --wait" // SOPS
-  },
 
   "portsAttributes": {
     "8080": {
-      "label": "goapp http-server",
+      "label": "goapp",
       "onAutoForward": "openPreview"
     },
     "56268": {
@@ -36,7 +33,10 @@
         "ms-azuretools.vscode-docker",
         "ms-kubernetes-tools.vscode-kubernetes-tools"
       ],
-      "settings": {}
+      "settings": {
+        "cloudcode.autoDependencies": "off",
+        "go.toolsManagement.autoUpdate": false
+      }
     }
   }
 }
