--- a/deploy/goapp/overlays/dev/kustomization.yaml
+++ b/deploy/goapp/overlays/dev/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+components:
+  - ../../components/mongodb
 configMapGenerator:
   - name: config-envs
     literals:
