--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
   "image": "ghcr.io/damlys/godev:2022-10-31-12-08-20-a2d7cdf",
   "runArgs": [
     "--name=devcontainer-gomod",
+    "--env-file=${localEnv:HOME}${localEnv:USERPROFILE}/workspace/devcontainer.env",
     "--add-host=kubernetes.docker.internal:host-gateway"
     //
   ],
@@ -14,12 +15,17 @@
   },
   "mounts": [
     "type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock",
+    "type=volume,source=devvolume-aws,target=/root/.aws",
+    "type=volume,source=devvolume-azure,target=/root/.azure",
     "type=volume,source=devvolume-docker,target=/root/.docker",
     "type=volume,source=devvolume-gcloud,target=/root/.config/gcloud",
     "type=volume,source=devvolume-gh,target=/root/.config/gh",
+    "type=volume,source=devvolume-helm,target=/root/.config/helm",
     "type=volume,source=devvolume-k9s,target=/root/.config/k9s",
+    "type=volume,source=devvolume-kpt,target=/root/.kpt",
     "type=volume,source=devvolume-kube,target=/root/.kube",
-    "type=volume,source=devvolume-skaffold,target=/root/.skaffold"
+    "type=volume,source=devvolume-skaffold,target=/root/.skaffold",
+    "type=volume,source=devvolume-terraform,target=/root/.terraform.d"
   ],
 
   "portsAttributes": {
@@ -40,30 +46,30 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "eamodio.gitlens",
-        "esbenp.prettier-vscode",
-        "foxundermoon.shell-format",
-        "GitHub.vscode-pull-request-github",
-        "golang.go",
-        "googlecloudtools.cloudcode",
+        "amazonwebservices.aws-toolkit-vscode", // https://aws.amazon.com/visualstudiocode/
+        "eamodio.gitlens", // https://github.com/gitkraken/vscode-gitlens
+        "esbenp.prettier-vscode", // https://prettier.io/docs/en/editors.html#visual-studio-code
+        "foxundermoon.shell-format", // https://github.com/foxundermoon/vs-shell-format
+        "GitHub.vscode-pull-request-github", // https://vscode.github.com/
+        "golang.go", // https://github.com/golang/vscode-go
+        "googlecloudtools.cloudcode", // https://cloud.google.com/code
+        "hashicorp.hcl",
+        "hashicorp.terraform", // https://www.terraform.io/docs/terraform-tools
         "ms-azuretools.vscode-docker",
         "ms-kubernetes-tools.vscode-kubernetes-tools",
-        "redhat.vscode-xml"
+        "ms-vscode.vscode-node-azure-pack", // https://code.visualstudio.com/docs/azure/extensions
+        "redhat.vscode-xml",
+        "streetsidesoftware.code-spell-checker" // https://streetsidesoftware.com/vscode-spell-checker/
       ],
       "settings": {
-        "files.encoding": "utf8",
-        "files.eol": "\n",
-        "files.insertFinalNewline": true,
-        "files.trimFinalNewlines": true,
-        "files.trimTrailingWhitespace": true,
-        "prettier.printWidth": 120,
-        "yaml.format.printWidth": 120,
-
         "[dockerfile]": { "editor.defaultFormatter": "ms-azuretools.vscode-docker" },
         "[go]": { "editor.defaultFormatter": "golang.go" },
-        "[ignore]": { "editor.defaultFormatter": "foxundermoon.shell-format" },
+        "[hcl]": { "editor.defaultFormatter": "hashicorp.hcl" },
+        "[helm]": { "editor.defaultFormatter": null, "editor.formatOnSave": false },
         "[json][jsonc]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+        "[ignore]": { "editor.defaultFormatter": "foxundermoon.shell-format" },
         "[shellscript]": { "editor.defaultFormatter": "foxundermoon.shell-format" },
+        "[terraform][terraform-vars]": { "editor.defaultFormatter": "hashicorp.terraform" },
         "[xml]": { "editor.defaultFormatter": "redhat.vscode-xml" },
         "[yaml]": { "editor.defaultFormatter": "redhat.vscode-yaml" },
 
@@ -71,6 +77,8 @@
 
         "go.lintTool": "golangci-lint",
         "go.toolsManagement.autoUpdate": false,
+
+        "redhat.telemetry.enabled": false,
 
         "shellformat.path": "/usr/local/bin/shfmt"
       }
